Fix notification text in production environments not visible/accessible (#6258)
* Fix unreadable/inaccessible CDN notification text in prod environments

Also removes a ton of redundant and/or unused rules and/or selectors

* Fix double-highlighting menu items

* Remove a bunch of duplicate/ineffectual rules/selectors and uses of !important

* Update CHANGELOG

(cherry picked from commit b02bbe74eeb4277299c5ffa5f912bbca449828ed)

--- a/traffic_portal/app/src/common/modules/chart/_chart.scss
+++ b/traffic_portal/app/src/common/modules/chart/_chart.scss
@@ -27,10 +27,11 @@
   }
 }
 
+/* is this used anywhere? Possibly content dynamically inserted by a library? */
 .x_content {
   div.legend {
     table {
-      width: initial !important;
+      width: initial;
     }
   }
 }
@@ -47,6 +48,3 @@
   }
 
 }
-
-
-
